--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,15 @@ spring:
   jpa:
     properties:
       hibernate:
+        ddl-auto: validate
         show_sql: true
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    user: ${SPRING_BOOT_USERNAME}
+    password: ${SPRING_BOOT_PASSWORD}
+    baseline-version: 0
+    baseline-description: "init"
 management:
   endpoints:
     web:
